working docker-compose with volume
- on other hand, whenever I change index.html, it is updated in the corresponsind container on the `up` command.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   web: 
     build: web
     container_name: web
-#    volumes: 
-#      - cdn-static-volume: /user/share/nginx/html:ro
+    volumes: 
+      - cdn-static-volume:/user/share/nginx/html:ro
     ports: 
       - 5678:80
-#volumes: 
-#  cdn-static-volume:
+volumes: 
+  cdn-static-volume:
