make separate excercies for docker and docker-compose

--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,2 @@
-# defines project suffix, for example 
-#   web service image will be called "dummy_web" 
-#   web service container will be calle "dummy_web_1"
-COMPOSE_PROJECT_NAME=dummy
+IMAGE_NAME="example-docker:latest"
+CONTAINER_NAME="example-docker"
