--- a/docker-compose/web/Dockerfile
+++ b/docker-compose/web/Dockerfile
@@ -4,5 +4,5 @@
 #   docker rm dummy-instance
 #   docker run --name dummy-instance -p 5678:80 -d dummy-web
 FROM nginx:stable
+#RUN rm -rf /usr/share/nginx/html/*
 COPY server-files/cdn /usr/share/nginx/html
-EXPOSE 5678
