documented nginx solution using Dockerfile

--- a/docker/.env
+++ b/docker/.env
@@ -1,2 +1,4 @@
 IMAGE_NAME="example-docker:latest"
 CONTAINER_NAME="example-docker"
+CDN_VOLUME_NAME="example-docker-volume"
+NGINX_MOUNT_POINT="/usr/share/nginx/html"
