--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,18 +1,13 @@
 version: "3.9"
-services: 
-  web: 
-    build: web
+services:
+  web:
+    image: example-docker:latest
     container_name: web
-    # volumes: 
-    #   - cdn-static-volume:/usr/share/nginx/html:ro
-    ports: 
-      - 5678:80
-  backup: 
-    build: backup
-    container_name: backup
-    # volumes: 
-    #   - cdn-static-volume:/usr/share/nginx/html:ro
-    ports: 
+    volumes:
+      - example-docker-volume:/usr/share/nginx/html:ro
+    ports:
       - 5679:80
-volumes: 
-  cdn-static-volume:
+volumes:
+  example-docker-volume:
+    external:
+      name: example-docker-volume
